# templates

./: .gitignore  CODEOWNERS  README.md  schema.graphql  template_manifest.json  test_queries.graphql
.github/: renovate.json5
.github/ISSUE_TEMPLATE/: config.yml  new_template.yml
.github/workflows/: checks.yaml  deploy.yaml
netlify/functions/server/: Cargo.toml  templates.json
netlify/functions/server/src/: errors.rs  export_schema.rs  handler.rs  main.rs
netlify/functions/server/src/schema/: mod.rs  template.rs
templates/client/web/create-react-app/: package-lock.json  package.json
templates/subgraph/javascript-apollo-server-minimal/: package.json  schema.graphql
templates/subgraph/javascript-apollo-server-minimal/src/: index.js
templates/subgraph/javascript-apollo-server-minimal/src/__tests__/: repo.test.js
templates/subgraph/typescript-apollo-server-minimal/src/: index.ts
templates/subgraph/typescript-apollo-server-minimal/src/resolvers/: foo.ts
templates/subgraph/typescript-apollo-server-minimal/src/types/: DataSourceContext.ts
templates/subgraph/typescript-apollo-server-rest-datasource/: package-lock.json
workflows/code-first/: apollo.yaml  checks.yaml
workflows/sdl-first/: checks.yaml  deploy.yaml
