[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "export-schema"
path = "src/export_schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.11", features = ["url"] }
aws_lambda_events = "0.10.0"
http = "1.0.0"
lambda_http = "0.8.1"
lambda_runtime = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.193"
serde_json = "1.0.93"
simple_logger = "4.0.0"
thiserror = "1.0.38"
tokio = "1.33.0"
url = { version = "2.5.0", features = ["serde"] }
