[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "export-schema"
path = "src/export_schema.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.0", features = ["url"] }
aws_lambda_events = "0.13.0"
http = "1.0.0"
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
simple_logger = "4.3.3"
thiserror = "1.0.38"
tokio = "1.33.0"
url = { version = "2.5.0", features = ["serde"] }
